<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
        <relativePath/>
    </parent>

    <groupId>com.innercircle</groupId>
    <artifactId>sacco-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>InnerCircle SACCO</name>
    <description>Chama management system — modular monolith</description>

    <modules>
        <module>sacco-common</module>
        <module>sacco-security</module>
        <module>sacco-member</module>
        <module>sacco-contribution</module>
        <module>sacco-loan</module>
        <module>sacco-payout</module>
        <module>sacco-ledger</module>
        <module>sacco-reporting</module>
        <module>sacco-audit</module>
        <module>sacco-config</module>
        <module>sacco-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springdoc.version>2.8.4</springdoc.version>
        <spring-auth-server.version>1.4.2</spring-auth-server.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-member</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-contribution</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-loan</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-payout</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-ledger</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-reporting</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-audit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.innercircle</groupId>
                <artifactId>sacco-config</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Spring Authorization Server -->
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-authorization-server</artifactId>
                <version>${spring-auth-server.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Lombok available to all modules -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Test dependencies available to all modules -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
